# hands-on-modern-rl-pq

./: .gitignore  .prettierignore  README.en.md  README.md  README.zh.md  eslint.config.js  package-lock.json  package.json  vercel.json
.agents/git-pr-workflow/: SKILL.md
.github/workflows/: deploy.yml
code/: README.md  pyproject.toml
code/chapter01_cartpole/: hello_rl.py  hello_rl_tensorboard.py  pytorch_from_scratch.py  requirements.txt
code/chapter02_dpo/: 0-download_model.py  0-generate_data.py  1-test_before.py  2-test_before.py  2-train_dpo.py  3-test_after.py  3-train_dpo.py  4-test_after.py  requirements.txt
code/chapter04_dqn/: render_atari.py
docs/.vitepress/: config.mjs
docs/appendix_algorithm_guide/: algorithm-selection.md  framework-mbrl.md  intro.md
docs/appendix_code_cheatsheet/: dpo-family.md  grpo-rlvr.md  intro.md  ppo-gae.md  sft-kl.md
docs/appendix_common_pitfalls/: oom-nonconvergence.md
docs/appendix_env_install/: intro.md
docs/appendix_game_projects/: intro.md
docs/appendix_industrial_training/: agentic-rl-infra.md  async-training.md  parallelism.md  rl-infrastructure.md
docs/appendix_math/: calculus-optimization.md  information-theory.md  intro.md  linear-algebra-formulas-exercises.md  linear-algebra.md  probability-statistics.md
docs/appendix_papers/: intro.md
docs/appendix_terminology/: intro.md
docs/chapter01_cartpole/: intro.md  metrics.md  principles.md
docs/chapter02_dpo/: intro.md  metrics.md  principles.md
docs/chapter03_mdp/: bandit.md  (+12 more)
scripts/: generate-sitemap.mjs  optimize-assets.mjs  verify.sh
(+54 files in other folders)
