[project]
name = "hands-on-modern-rl-pq"
version = "0.1.0"
description = "Environment for hands-on reinforcement learning course"
requires-python = ">=3.10"
dependencies = [
    "gymnasium>=1.2.3",
    "matplotlib>=3.10.9",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "stable-baselines3[extra]>=2.8.0",
    "swanlab[dashboard]>=0.7.19",
    "tensorboard>=2.20.0",
    "torch>=2.12.0",
    "torchvision>=0.27.0",
    "tqdm>=4.67.3",
    "wandb>=0.27.0",
]
